7902387: Refactoring: misc part 1